<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.android_lab1.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.android_lab1.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.android_lab1.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />


    <fragment
        android:id="@+id/fragment_instagram_stories"
        android:name="com.example.android_lab1.InstagramStoriesFragment"
        android:label="@string/share_image_to_instagram_stories"
        tools:layout="@layout/fragment_instagram_stories" />

    <fragment
        android:id="@+id/fragment_music_player"
        android:name="com.example.android_lab1.MusicPlayerFragment"
        android:label="@string/music_player"
        tools:layout="@layout/fragment_music_player" />

    <fragment
        android:id="@+id/fragment_airplane_mode"
        android:name="com.example.android_lab1.AirplaneModeFragment"
        android:label="@string/airplane_mode_toggle"
        tools:layout="@layout/fragment_airplane_mode" />

    <fragment
        android:id="@+id/fragment_see_upcoming_events"
        android:name="com.example.android_lab1.SeeUpcomingEventsFragment"
        android:label="@string/see_upcoming_events"
        tools:layout="@layout/fragment_see_upcoming_events" />
</navigation>